--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,26 +15,26 @@ import Layout from "../layouts/main.astro";
         <h1
           class="mb-5 text-4xl font-bold leading-tight md:text-4xl lg:text-6xl dark:text-white"
         >
-          Hello, I'm Kai.
+          Bonjour, je suis Maxime.
         </h1>
         <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
-          I'm a front-end programmer living in Nanjing. <br
+          Étudiant en informatique à Metz. <br
             class="hidden lg:block"
-          />I focus on Web development.
+          />Actuellement en 3ème annéee de BUT Informtatique en parcours "Réalisation d'applications".
         </p>
         <p class="mb-2 font-semibold text-neutral-800 dark:text-neutral-200">
-          I can help you out with:
+          Langages/Technologies :
         </p>
         <ul
           class="py-2 space-y-[3px] text-sm list-disc list-inside text-neutral-500 dark:text-neutral-400"
         >
-          <li>Vue.js Development</li>
-          <li>React.js Development</li>
-          <li>Node.js Development</li>
-          <li>Website Design</li>
-          <li>and more...</li>
+          <li>HTML/CSS</li>
+          <li>Typescript</li>
+          <li>Angular</li>
+          <li>Flutter</li>
+          <li>et bien plus...</li>
         </ul>
-        <Button text="Follow me on 𝕏" link="https://twitter.com/0xKaiBi" />
+        <Button text="Lien vers mon Github" link="https://github.com/Jacopswi" />
       </div>
       <div
         class="relative justify-end hidden w-full mt-10 md:flex md:pl-10 md:w-1/2 md:mt-0 md:translate-y-4 xl:translate-y-0"
@@ -48,16 +48,16 @@ import Layout from "../layouts/main.astro";
             >
               <span
                 class="flex items-center justify-center w-full h-full bg-white border border-dashed rounded-full dark:bg-neutral-950 border-neutral-300 dark:border-neutral-700"
-                >👋</span
+                >👨‍💻</span
               >
             </span>
           </div>
           <div class="relative z-30 px-10">
             <img
-              src="/assets/images/photo.png"
+              src="/assets/images/phototest.png"
               loading="eager"
               decoding="auto"
-              class="relative z-30 w-full aspect-[790/1189] md:max-w-md mx-auto dark:-translate-y-0.5"
+              class="relative z-30 w-2/3 aspect-[422/591] md:max-w-md mx-auto dark:-translate-y-0.5 rounded-md items-center my-auto"
             />
           </div>
           <div
@@ -69,8 +69,6 @@ import Layout from "../layouts/main.astro";
     </div>
   </div>
 
-  <Separator text="Check out my projects" />
+  <Separator text="Projets personnels" />
   <Projects />
-  <Separator text="Some of my writing" />
-  <Writings />
 </Layout>
