--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Projects from "../components/home/projects.astro";
 import Separator from "../components/home/separator.astro";
 import Writings from "../components/home/writings.astro";
 import Layout from "../layouts/main.astro";
+import SwitchFont from "../components/switchFont.astro";
 ---
 
 <Layout title="Kai">
@@ -15,8 +16,10 @@ import Layout from "../layouts/main.astro";
         <h1
           class="mb-5 text-4xl font-bold leading-tight md:text-4xl lg:text-6xl dark:text-white"
         >
-          Bonjour, je suis Maxime.
+          Bonjour, je suis
         </h1>
+        <SwitchFont text="Maxime"></SwitchFont>
+
         <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
           Étudiant en informatique à Metz. <br
             class="hidden lg:block"
