--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,11 +5,11 @@ import PageHeading from "../components/page-heading.astro";
 import Layout from "../layouts/main.astro";
 ---
 
-<Layout title="About Me">
+<Layout title="A propos">
   <section class="relative z-20 max-w-2xl mx-auto my-12 px-7 lg:px-0">
     <PageHeading
-      title="About Me"
-      description="Hello 👋 I'm a frontend engineer from Nanjing, China. I'm passionate about building new products and learning new technology."
+      title="A propos de moi"
+      description="Je suis Maxime Bonnet, actuellement en 3ème année de BUT Informatique. L'informatique n'est pas seulement ce que j'étudie, c'est aussi ma passion. Que ce soit le développement de logiciels, la création de sites web, ou l'exploration de nouvelles technologies, je suis toujours enthousiaste à l'idée d'en apprendre plus et de relever de nouveaux défis."
     />
 
     <img src="/assets/images/about.jpg" class="relative z-30 w-full my-10 rounded-xl" />
