--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,61 +12,18 @@ import Layout from "../layouts/main.astro";
       description="Je suis Maxime Bonnet, actuellement en 3ème année de BUT Informatique. L'informatique n'est pas seulement ce que j'étudie, c'est aussi ma passion. Que ce soit le développement de logiciels, la création de sites web, ou l'exploration de nouvelles technologies, je suis toujours enthousiaste à l'idée d'en apprendre plus et de relever de nouveaux défis."
     />
 
-    <img src="/assets/images/about.jpg" class="relative z-30 w-full my-10 rounded-xl" />
 
-    <h2 class="mb-2 text-2xl font-bold dark:text-neutral-200">Short Bio</h2>
+    <h2 class="mt-5 mb-2 text-2xl font-bold lg:mt-10 sm:mt-6 dark:text-neutral-200">Contact</h2>
     <p
       class="text-sm leading-6 text-gray-600 dark:text-neutral-400 sm:leading-7 lg:leading-8 sm:text-base lg:text-lg"
     >
-      Front-end cutter 🧑🏻‍💻, back-end amateur 🤷🏻‍♂️, operations digging holes person 🤦🏻‍♂️.
-    </p>
-
-    <h2
-      class="mt-5 mb-2 text-2xl font-bold lg:mt-10 sm:mt-6 dark:text-neutral-200"
-    >
-      Experience
-    </h2>
-    <div class="px-5 py-10">
-      {
-        experiences.map((experience, loop) => {
-          return (
-            <>
-              {loop == 0 || loop == 1 ? (
-                <div class="pb-10 border-l border-gray-200 dark:border-neutral-700">
-                  <AboutExperience
-                    dates={experience.dates}
-                    role={experience.role}
-                    company={experience.company}
-                    description={experience.description}
-                    logo={experience.logo}
-                  />
-                </div>
-              ) : (
-                <AboutExperience
-                  dates={experience.dates}
-                  role={experience.role}
-                  company={experience.company}
-                  description={experience.description}
-                  logo={experience.logo}
-                />
-              )}
-            </>
-          )
-        })
-      }
-    </div>
-
-    <h2 class="mt-5 mb-2 text-2xl font-bold lg:mt-10 sm:mt-6 dark:text-neutral-200">Let's Connect</h2>
-    <p
-      class="text-sm leading-6 text-gray-600 dark:text-neutral-400 sm:leading-7 lg:leading-8 sm:text-base lg:text-lg"
-    >
-      If you want to stay up to date with my work be sure to <a
-        href="https://twitter.com/ccikai"
-        target="_blank"
-        class="text-indigo-600 underline">follow me on twitter</a
-      >, or you can send me an <a href="mailto:astro-aria#miantiao.me" class="text-indigo-600 underline"
+      Vous pouvez me contacter par <a href="mailto:bonnet.maxime54@gmail.com" class="text-indigo-600 underline"
         >email</a
-      > and I'll be sure to get back to you.
+      > ou sur <a href="https://www.linkedin.com/in/maxime-bonnet-68b87029b/" class="text-indigo-600 underline"
+      >Linkedin</a>
+      <br> <br>
+
+      Email de contact : bonnet.maxime54@gmail.com
     </p>
   </section>
 </Layout>
