--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import SwitchFont from "../components/switchFont.astro";
         <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
           Étudiant en informatique à Metz. <br
             class="hidden lg:block"
-          />Actuellement en 3ème annéee de BUT Informtatique en parcours "Réalisation d'applications".
+          />Actuellement en 3ème annéee de BUT Informatique en parcours "Réalisation d'applications".
         </p>
         <p class="mb-2 font-semibold text-neutral-800 dark:text-neutral-200">
           Langages/Technologies :
